# template.py

./: .flake8  .gitignore  .pre-commit-config.yaml  .pylintrc  .readthedocs.yaml  Dockerfile  Dockerfile.package  Dockerfile.source  LICENSE  README.md  mkdocs.yml  pyproject.toml  requirements-dev.txt  requirements-doc.txt  requirements.txt  setup.cfg  setup.py
.github/workflows/: pytest.yml
docs/: modules.rst  requirements.txt  template.rst
docs/source/: conf.py  index.rst  modules.rst
scripts/: gen_ref_pages.py
src/template/: __init__.py  cli.py
src/tests/: test_template.py
template/: cli.py
tests/: test_template.py
