
[bumpversion]
current_version = 0.1.0
commit = True
tag = True

[metadata]
description-file = README.md

[bumpversion:file:setup.py]
search = version='{current_version}'
replace = version='{new_version}'

[options]
install_requires = matplotlib>=3.5
    scipy>=1.8
    omegaconf>=2.1.1
    hydra-core>=1.1.0
    iopath>=0.1.9
    tabulate>=0.8.9
    termcolor>=1.1.0
    importlib-metadata>=0.12;python_version<"3.8"
python_requires = >=3.8
setup_requires = setuptools>=45.0
    setuptools_scm[toml]>=6.3.1
    wheel

[options.extras_require]
dev = black==21.12b0
    isort>=5.10
    flake8>=4.0
test = pytest>=7.0
    pytest-cov>=3.0
    coverage>=6.3

[flake8]
exclude=docs
[tool:pytest]
collect_ignore = ['setup.py']

[isort]
line_length = 100
multi_line_output=3
include_trailing_comma=True
known_standard_library=logging,os,pathlib,re,typing,warnings,setuptools
skip=./datasets,docs
skip_glob=*/__init__.py,**/configs/**,tests/config/**
known_third_party=numpy,matplotlib,pandas,sklearn,tensorflow,tqdm,scipy
profile = black
filter_files = true
